--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,13 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
+    - name: Clone Foundation v7
+      run: |
+        git clone --branch v7 https://github.com/kangarko/Foundation.git
+        cd Foundation
+        mvn -B clean install
+      shell: bash
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
@@ -28,3 +35,7 @@ jobs:
       with:
         name: java-build
         path: target/*.jar
+
+    # Optional: Upload dependency graph for Dependabot
+    - name: Update dependency graph
+      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
